Resolves: tdf#120862 double-click in bullets and numbering

Change-Id: I3d8aa529fc5ac8a8f80eb1fd6728786680f2aee2
Reviewed-on: https://gerrit.libreoffice.org/62277
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>